crates/lang/macro/tests/ui/trait_def/fail/message_payable_invalid_1.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait InvalidPayable {
    #[ink(message, payable = false)]
    fn invalid_payable(&self);
}

fn main() {}
