crates/lang/macro/tests/ui/trait_def/fail/message_payable_invalid_1.stderr
error: unknown ink! attribute argument (name = value)
 --> $DIR/message_payable_invalid_1.rs:5:20
  |
5 |     #[ink(message, payable = false)]
  |                    ^^^^^^^^^^^^^^^
